# databricks-mcp

./: .env.example  .gitignore  .mcp.json  pyproject.toml
.github/workflows/: ci.yml
docs/: REQUIREMENTS.md
skills/databricks-debug/: SKILL.md
src/databricks_debug_mcp/: client.py  config.py  event_log.py  formatting.py  server.py  sql.py
src/databricks_debug_mcp/tools/: clusters.py  delta.py  diagnostics.py  event_logs.py  init_scripts.py  jobs.py  lineage.py  logs.py  pipelines.py  spark_analysis.py  spark_ui.py  system_tables.py
tests/: conftest.py  test_client.py  test_clusters.py  test_delta.py  test_event_log.py  test_event_log_tools.py  test_formatting.py  test_init_scripts.py  test_jobs.py  test_lineage.py  test_logs.py  test_pipelines.py  test_server.py  test_spark_analysis.py  test_spark_ui.py  test_sql.py  test_system_tables.py
