[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "databricks-debug-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "databricks-sdk>=0.40.0",
    "httpx>=0.27.0",
]

[project.scripts]
databricks-debug-mcp = "databricks_debug_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/databricks_debug_mcp"]
